--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-flaskuser}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-flaskpass}
-      - POSTGRES_DB=${POSTGRES_DB:-flask_db}
+      - POSTGRES_USER=flaskuser
+      - POSTGRES_PASSWORD=flaskpass
+      - POSTGRES_DB=flask_db
     depends_on:
       - db
     restart: unless-stopped
@@ -16,14 +16,15 @@ services:
   db:
     image: postgres:13
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data  # This references the volume
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-flaskuser}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-flaskpass}
-      - POSTGRES_DB=${POSTGRES_DB:-flask_db}
+      - POSTGRES_USER=flaskuser
+      - POSTGRES_PASSWORD=flaskpass
+      - POSTGRES_DB=flask_db
     ports:
       - "5432:5432"
     restart: unless-stopped
 
+# THIS SECTION WAS MISSING - MUST DECLARE ALL NAMED VOLUMES
 volumes:
-  postgres_data:
+  postgres_data:  # This declares the volume
